--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,18 +1,17 @@
 <div class="social">
   {% if site.github %}
-  <a href="http://github.com/{{ site.github }}"><i class="fa fa-github"></i></a>
+    <a href="http://github.com/{{ site.github }}"><i class="fab fa-github-square"></i></a>
   {% endif %}
+
   {% if site.email %}
-  <a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a>
+    <a href="mailto:{{ site.email}}"><i class="fas fa-envelope-square"></i></a>
   {% endif %}
 
   {% if site.twitter %}
-  <a href="http://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i></a>
+    <a href="http://twitter.com/{{ site.twitter }}"><i class="fab fa-twitter-square"></i></a>
   {% endif %}
+
   {% if site.linkedin %}
-  <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
-  {% endif %}
-  {% if site.stackoverflow %}
-  <a href="http://stackoverflow.com/{{ site.stackoverflow }}"><i class="fa fa-stack-overflow"></i></a>
+    <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fab fa-linkedin"></i></a>
   {% endif %}
 </div>
