--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -10,16 +10,33 @@ $container-max-widths: (
 // Color system
 
 $white:     #FFFFFF !default;
-$gray-100:  #F8F9FA !default;
-$gray-200:  #F7F7F9 !default;
-$gray-300:  #ECEEEF !default;
-$gray-400:  #CED4DA !default;
-$gray-500:  #AAAAAA !default;
-$gray-600:  #888888 !default;
-$gray-700:  #5A5A5A !default;
-$gray-800:  #343A40 !default;
-$gray-900:  #212529 !default;
+$gray-100:  #F5F5F5 !default;
+$gray-200:  #DCDCDC !default;
+$gray-300:  #C0C0C0 !default;
+$gray-400:  #A9A9A9 !default;
+$gray-500:  #808080 !default;
+$gray-600:  #686868 !default;
+$gray-700:  #505050 !default;
+$gray-800:  #383838 !default;
+$gray-900:  #202020 !default;
 $black:     #000000 !default;
+
+$grays: () !default;
+// stylelint-disable-next-line scss/dollar-variable-default
+$grays: map-merge(
+  (
+    "100": $gray-100,
+    "200": $gray-200,
+    "300": $gray-300,
+    "400": $gray-400,
+    "500": $gray-500,
+    "600": $gray-600,
+    "700": $gray-700,
+    "800": $gray-800,
+    "900": $gray-900
+  ),
+  $grays
+);
 
 $pink:      #A40080 !default;
 $purple:    #550055 !default;
@@ -34,19 +51,68 @@ $purplish:  #EBC6EB !default;
 $bluish:    #7EDCFB !default;
 $tealish:   #88D9D9 !default;
 
+$colors: () !default;
+// stylelint-disable-next-line scss/dollar-variable-default
+$colors: map-merge(
+  (
+    "pink":         $pink,
+    "purple":       $purple,
+    "blue":         $blue,
+    "teal":         $teal,
+    "pinker":       $pinker,
+    "purpler":      $purpler,
+    "bluer":        $bluer,
+    "tealer":       $tealer,
+    "pinkish":      $pinkish,
+    "purplish":     $purplish,
+    "bluish":       $bluish,
+    "tealish":      $tealish
+  ),
+  $colors
+);
+
+$primary:   $purple !default;
+$secondary: $teal !default;
+$light:     $pinkish !default;
+$dark:      $bluer !default;
+$muted:     #3FA9A9 !default;
+$disabled:  $gray-400 !default;
 $info:      #59CFF6 !default;
 $success:   #11A973 !default;
 $warning:   #FFE839 !default;
 $danger:    #97004D !default;
-$muted:     #3FA9A9 !default;
-$light:     $gray-100 !default;
-$dark:      $gray-800 !default;
+
+$theme-colors: () !default;
+// stylelint-disable-next-line scss/dollar-variable-default
+$theme-colors: map-merge(
+  (
+    "primary":    $primary,
+    "secondary":  $secondary,
+    "light":      $light,
+    "dark":       $dark,
+    "muted":      $muted,
+    "disabled":   $disabled,
+    "info":       $info,
+    "success":    $success,
+    "warning":    $warning,
+    "danger":     $danger
+  ),
+  $theme-colors
+);
+
+// Options
+
+// Quickly modify global styling by enabling or disabling optional features
+
+$enable-shadows:                              true !default;
+$enable-gradients:                            true !default;
 
 // Body
 
 // Settings for the `<body>` element
 
-$body-color:              $purpler !default;
+$body-bg:                   $white !default;
+$body-color:                $bluer !default;
 
 // Links
 
@@ -59,6 +125,9 @@ $link-hover-decoration:                   none !default;
 // Components
 
 // Define common padding and border radius sizes and more
+
+$component-active-color:      $white !default;
+$component-active-bg:         theme-color("primary") !default;
 
 $border-radius:           .4rem !default;
 $border-radius-lg:        .6rem !default;
@@ -126,24 +195,58 @@ $btn-border-radius-sm:        0 !default;
 
 $btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 
-// Forms
+// Navs
 
+$nav-link-padding-y:                2rem !default;
+$nav-link-padding-x:                2rem !default;
 
+$nav-tabs-border-color:             $blue !default;
+$nav-tabs-link-hover-border-color:  $bluer $bluer $nav-tabs-border-color !default;
+$nav-tabs-link-active-color:        $blue !default;
+$nav-tabs-link-active-border-color: $blue $blue $nav-tabs-link-active-bg !default;
 
-// Dropdowns
-
-$dropdown-link-hover-color:         $white !default;
-$dropdown-link-hover-bg:            $pinker !default;
+$nav-divider-color:                 $blue !default;
 
 // Navbar
 
-$navbar-dark-color:                 rgba($white,.6) !default;
-$navbar-dark-hover-color:           $white !default;
+$navbar-padding-y:                  $spacer * 2 !default;
+$navbar-padding-x:                  $spacer * 2 !default;
 
-$navbar-light-color:                rgba($black,.3) !default;
-$navbar-light-hover-color:          $gray-700 !default;
-$navbar-light-active-color:         $gray-700 !default;
-$navbar-light-disabled-color:       rgba($black,.1) !default;
+$navbar-nav-link-padding-x:         2rem !default;
+
+$navbar-dark-color:                 rgba($teal, .5) !default;
+$navbar-dark-hover-color:           rgba($teal, .75) !default;
+$navbar-dark-active-color:          $teal !default;
+$navbar-dark-disabled-color:        rgba($disabled, .25) !default;
+$navbar-dark-toggler-border-color:  rgba($teal, .1) !default;
+
+$navbar-light-color:                rgba($purpler, .5) !default;
+$navbar-light-hover-color:          rgba($purpler, .7) !default;
+$navbar-light-active-color:         rgba($purpler, .9) !default;
+$navbar-light-disabled-color:       rgba($disabled, .3) !default;
+$navbar-light-toggler-border-color: rgba($white, .1) !default;
+
+// Dropdowns
+
+// Dropdown menu container and contents
+
+$dropdown-color:                    $pinker !default;
+$dropdown-border-color:             rgba($tealer, .15) !default;
+$dropdown-box-shadow:               0 .5rem 1rem rgba($bluer, .175) !default;
+
+$dropdown-link-color:               $purpler !default;
+$dropdown-link-hover-color:         darken($purpler, 5%) !default;
+$dropdown-link-hover-bg:            $purplish !default;
+
+$dropdown-link-active-color:        $component-active-color !default;
+$dropdown-link-active-bg:           $component-active-bg !default;
+
+$dropdown-link-disabled-color:      $gray-600 !default;
+
+$dropdown-item-padding-y:           .25rem !default;
+$dropdown-item-padding-x:           1.5rem !default;
+
+$dropdown-header-color:             $gray-600 !default;
 
 // Pagination
 
