--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -385,157 +385,29 @@ img::-moz-selection {
 
 /* Navbar */
 .navbar-custom {
-  background: $white;
+  background: white;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 3;
-  font-family: $headings-font-family;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .navbar-custom .navbar-brand {
-  font-weight: $bold;
+  font-weight: 800;
 }
 .navbar-custom .nav li a {
   text-transform: uppercase;
   font-size: 1.2rem;
-  font-weight: $bold;
+  font-weight: 800;
   letter-spacing: 1px;
 }
 .navbar-static-top {
   margin-bottom: 1rem;
 }
 .navbar-default {
-  background-color: $white;
-  border-color: $white;
-}
-.navbar-default .navbar-brand {
-  color: $purpler;
-}
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: $purpler;
-}
-.navbar-default .navbar-text {
-  color: $purpler;
-}
-.navbar-default .navbar-nav > li > a {
-  color: $purpler;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: $purpler;
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  color: $purpler;
-  background-color: $white;
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  color: $purpler;
-  background-color: $white;
-}
-.navbar-default .navbar-toggle {
-  border-color: $white;
-}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: $white;
-}
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: $purpler;
-}
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-  border-color: $purpler;
-}
-.navbar-default .navbar-link {
-  color: $purpler;
-}
-.navbar-default .navbar-link:hover {
-  color: $purpler;
-}
-
-@media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: $purpler;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: $purpler;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: $purpler;
-    background-color: $white;
-  }
-}
-
-/* Collapsible Navigation Bar */
-@media (min-width: 768px) {
-  .navbar-custom {
-    background: transparent;
-    border-bottom: 1px solid transparent;
-  }
-  .navbar-custom .navbar-brand {
-    color: $teal;
-    padding: 2rem;
-  }
-  .navbar-custom .navbar-brand:hover,
-  .navbar-custom .navbar-brand:focus {
-    color: rgba($teal, 0.8);
-  }
-  .navbar-custom .nav li a {
-    color: $teal;
-    padding: 2rem;
-  }
-  .navbar-custom .nav li a:hover,
-  .navbar-custom .nav li a:focus {
-    color: rgba($teal, 0.8);
-  }
-}
-
-/* Fixed Navigation Bar */
-@media (min-width: 1170px) {
-  .navbar-custom {
-    -webkit-transition: background-color 0.3s;
-    -moz-transition: background-color 0.3s;
-    transition: background-color 0.3s;
-    /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  .navbar-custom.is-fixed {
-    /* when the user scrolls down, we hide the header right above the viewport */
-    position: fixed;
-    top: -6.1rem;
-    background-color: rgba($white, 0.9);
-    border-bottom: 1px solid $gray-100;
-    -webkit-transition: -webkit-transform 0.3s;
-    -moz-transition: -moz-transform 0.3s;
-    transition: transform 0.3s;
-  }
-  .navbar-custom.is-fixed .navbar-brand {
-    color: $purple;
-  }
-  .navbar-custom.is-fixed .navbar-brand:hover,
-  .navbar-custom.is-fixed .navbar-brand:focus {
-    color: $blue;
-  }
-  .navbar-custom.is-fixed .nav li a {
-    color: $purple;
-  }
-  .navbar-custom.is-fixed .nav li a:hover,
-  .navbar-custom.is-fixed .nav li a:focus {
-    color: $blue;
-  }
-  .navbar-custom.is-visible {
-    /* if the user changes the scrolling direction, we show the header */
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    -o-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 
 
